--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+
+  flutter_riverpod: ^1.0.3
+  sizer: ^2.0.15
+
   cupertino_icons: ^1.0.2
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.7
